Tweaking responsiveness of site.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ css/.sass-cache/3a9db11bba1ac94619703f356a1122f3fedc0e1d/_all.sassc
 css/.sass-cache/3a9db11bba1ac94619703f356a1122f3fedc0e1d/_all.scssc
 
 css/.sass-cache/3a9db11bba1ac94619703f356a1122f3fedc0e1d/main.scssc
+
+css/.sass-cache/3a9db11bba1ac94619703f356a1122f3fedc0e1d/_responsive.scssc
+
+css/.sass-cache/3a9db11bba1ac94619703f356a1122f3fedc0e1d/extended.scssc
